# Speechifier

./: .gitignore  LICENSE  README.md  run.bat  run.sh
.github/workflows/: android-build.yml
android/: .gitignore  README.md  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  chinese_g2p.cpp  japanese_g2p.cpp  native_g2p.cpp
android/app/src/main/java/com/speechifier/: SpeechifierApp.kt
android/app/src/main/java/com/speechifier/assets/: AssetCatalog.kt  AssetInstaller.kt  Downloader.kt
android/app/src/main/java/com/speechifier/audio/: AudioTrackPlayer.kt  ClockTtsPlayer.kt  TtsPlayer.kt
android/app/src/main/java/com/speechifier/pdf/: PdfExtractor.kt  PdfReader.kt  StubPdfReader.kt
android/app/src/main/java/com/speechifier/player/: ReaderViewModel.kt  ReaderViewModelFactory.kt  SentenceCache.kt  StubSynthesizer.kt  Synthesizer.kt
android/app/src/main/java/com/speechifier/text/: DisplayWords.kt  LangDetect.kt  Segmenter.kt
android/app/src/main/java/com/speechifier/tts/: ChinesePhonemizer.kt  EspeakPhonemizer.kt  JapanesePhonemizer.kt  (+7 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
backend/: app.py  pdf_utils.py  requirements.txt  tts.py
backend/static/: app.js  index.html  styles.css
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css  usePlayer.js
(+6 files in other folders)
